--- a/notebook/gnn.ipynb
+++ b/notebook/gnn.ipynb
@@ -31,8 +31,10 @@
     "        '''\n",
     "        citations: [target논문인덱스, source논문인덱스]\n",
     "        papers: [논문인덱스, 1424개 단어 포함 여부, 주제(subject)]\n",
-    "        train: papers 데이터 중 50% 샘플링\n",
-    "        test: papers 데이터 중 50% 샘플링\n",
+    "        train_data: papers 데이터 중 50% 샘플링\n",
+    "        test_data: papers 데이터 중 50% 샘플링\n",
+    "        x_train: train_data 중, 논문인덱스와 subject를 제외한 피쳐\n",
+    "        y_train: train_data 중 subject에 해당하는 레이블\n",
     "        '''\n",
     "        \n",
     "        zip_file = keras.utils.get_file(\n",
@@ -398,7 +400,7 @@
     "hidden_units = [32, 32]\n",
     "learning_rate = 0.01\n",
     "dropout_rate = 0.5\n",
-    "num_epochs = 300\n",
+    "num_epochs = 100\n",
     "batch_size = 256\n",
     "\n",
     "gnn_model = GNNNodeClassifier(\n",
@@ -873,22 +875,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "class_values = loader.class_values\n",
-    "\n",
-    "def generate_random_instances(num_instances):\n",
-    "    token_probability = x_train.mean(axis=0)\n",
-    "    instances = []\n",
-    "    for _ in range(num_instances):\n",
-    "        probabilities = np.random.uniform(size=len(token_probability))\n",
-    "        instance = (probabilities <= token_probability).astype(int)\n",
-    "        instances.append(instance)\n",
-    "\n",
-    "    return np.array(instances)\n",
-    "\n",
+    "node_features=loader.node_features\n",
+    "edges = loader.edges\n",
     "\n",
     "def display_class_probabilities(probabilities):\n",
     "    for instance_idx, probs in enumerate(probabilities):\n",
@@ -900,83 +893,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "node_features=loader.node_features\n",
-    "new_instances = generate_random_instances(num_classes)\n",
-    "edges = loader.edges"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "# First we add the N new_instances as nodes to the graph\n",
-    "# by appending the new_instance to node_features.\n",
-    "num_nodes = node_features.shape[0]\n",
-    "new_node_features = np.concatenate([node_features, new_instances])\n",
-    "# Second we add the M edges (citations) from each new node to a set\n",
-    "# of existing nodes in a particular subject\n",
-    "new_node_indices = [i + num_nodes for i in range(num_classes)]\n",
-    "new_citations = []\n",
-    "for subject_idx, group in papers.groupby(\"subject\"):\n",
-    "    subject_papers = list(group.paper_id)\n",
-    "    # Select random x papers specific subject.\n",
-    "    selected_paper_indices1 = np.random.choice(subject_papers, 5)\n",
-    "    # Select random y papers from any subject (where y < x).\n",
-    "    selected_paper_indices2 = np.random.choice(list(papers.paper_id), 2)\n",
-    "    # Merge the selected paper indices.\n",
-    "    selected_paper_indices = np.concatenate(\n",
-    "        [selected_paper_indices1, selected_paper_indices2], axis=0\n",
-    "    )\n",
-    "    # Create edges between a citing paper idx and the selected cited papers.\n",
-    "    citing_paper_indx = new_node_indices[subject_idx]\n",
-    "    for cited_paper_idx in selected_paper_indices:\n",
-    "        new_citations.append([citing_paper_indx, cited_paper_idx])\n",
-    "\n",
-    "new_citations = np.array(new_citations).T\n",
-    "new_edges = np.concatenate([edges, new_citations], axis=1)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: shape=(7,), dtype=int32, numpy=array([2708, 2709, 2710, 2711, 2712, 2713, 2714])>"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tf.convert_to_tensor(new_node_indices)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original node_features shape: (2715, 1433)\n",
-      "Original edges shape: (2, 5478)\n",
-      "New node_features shape: (2715, 1433)\n",
-      "New edges shape: (2, 5478)\n",
       "Instance 1:\n",
       "- Case_Based: 17.53%\n",
       "- Genetic_Algorithms: 15.67%\n",
@@ -1005,66 +928,11 @@
     }
    ],
    "source": [
-    "print(\"Original node_features shape:\", gnn_model.node_features.shape)\n",
-    "print(\"Original edges shape:\", gnn_model.edges.shape)\n",
-    "gnn_model.node_features = new_node_features\n",
-    "gnn_model.edges = new_edges\n",
-    "gnn_model.edge_weights = tf.ones(shape=new_edges.shape[1])\n",
-    "print(\"New node_features shape:\", gnn_model.node_features.shape)\n",
-    "print(\"New edges shape:\", gnn_model.edges.shape)\n",
     "logits = gnn_model.predict(tf.constant([2708, 2709, 2710]))\n",
     "# logits = gnn_model.predict(tf.convert_to_tensor(new_node_indices[:2]))\n",
     "probabilities = keras.activations.softmax(tf.convert_to_tensor(logits)).numpy()\n",
     "display_class_probabilities(probabilities)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: shape=(2,), dtype=int32, numpy=array([2708, 2709])>"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tf.convert_to_tensor(new_node_indices[:2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "__init__() missing 3 required positional arguments: 'op', 'value_index', and 'dtype'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_23948/848668155.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mTensor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: __init__() missing 3 required positional arguments: 'op', 'value_index', and 'dtype'"
-     ]
-    }
-   ],
-   "source": [
-    "tf.Tensor()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
