--- a/notebook/gnn_v2.ipynb
+++ b/notebook/gnn_v2.ipynb
@@ -178,6 +178,13 @@
    "outputs": [],
    "source": [
     "class GraphConvLayer(layers.Layer):\n",
+    "    '''\n",
+    "    1.gather: 이웃논문별 특성을 모음\n",
+    "    2.prepare: 이웃논문별 특성을 ffn한 후, edge점수를 곱함\n",
+    "    3.aggregate: 전체논문별로 이웃논문들의 결과를 aggregate함\n",
+    "    4.update1: 전체논문별 특성과 위 결과를 concat\n",
+    "    5.update2: concat한 것을 ffn해서 최종 embedding도출\n",
+    "    '''\n",
     "    def __init__(\n",
     "        self,\n",
     "        hidden_units,\n",
@@ -278,6 +285,65 @@
     "        aggregated_messages = self.aggregate(node_indices, neighbour_messages)\n",
     "        # Update the node embedding with the neighbour messages.\n",
     "        return self.update(node_repesentations, aggregated_messages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GNNModel:\n",
+    "    def __init__(self,\n",
+    "                graph_info,\n",
+    "                num_classes,\n",
+    "                hidden_units,\n",
+    "                aggregation_type=\"sum\",\n",
+    "                combination_type=\"concat\",\n",
+    "                dropout_rate=0.2,\n",
+    "                normalize=True,\n",
+    "                *args,\n",
+    "                **kwargs,):\n",
+    "        \n",
+    "        # Unpack graph_info to three elements: node_features, edges, and edge_weight.\n",
+    "        node_features, edges, edge_weights = graph_info\n",
+    "        self.node_features = node_features\n",
+    "        self.edges = edges\n",
+    "        self.edge_weights = edge_weights\n",
+    "        # Set edge_weights to ones if not provided.\n",
+    "        if self.edge_weights is None:\n",
+    "            self.edge_weights = tf.ones(shape=edges.shape[1])\n",
+    "        # Scale edge_weights to sum to 1.\n",
+    "        self.edge_weights = self.edge_weights / tf.math.reduce_sum(self.edge_weights)\n",
+    "\n",
+    "        # Create a process layer.\n",
+    "        self.preprocess = create_ffn(hidden_units, dropout_rate, name=\"preprocess\")\n",
+    "        # Create the first GraphConv layer.\n",
+    "        self.conv1 = GraphConvLayer(\n",
+    "            hidden_units,\n",
+    "            dropout_rate,\n",
+    "            aggregation_type,\n",
+    "            combination_type,\n",
+    "            normalize,\n",
+    "            name=\"graph_conv1\",\n",
+    "        )\n",
+    "        # Create the second GraphConv layer.\n",
+    "        self.conv2 = GraphConvLayer(\n",
+    "            hidden_units,\n",
+    "            dropout_rate,\n",
+    "            aggregation_type,\n",
+    "            combination_type,\n",
+    "            normalize,\n",
+    "            name=\"graph_conv2\",\n",
+    "        )\n",
+    "        # Create a postprocess layer.\n",
+    "        self.postprocess = create_ffn(hidden_units, dropout_rate, name=\"postprocess\")\n",
+    "        # Create a compute logits layer.\n",
+    "        self.compute_logits = layers.Dense(units=num_classes, name=\"logits\")\n",
+    "        \n",
+    "    def get_model(self):\n",
+    "        self.model = \n",
+    "        "
    ]
   },
   {
