--- a/notebook/gnn_v2.ipynb
+++ b/notebook/gnn_v2.ipynb
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
     "        # Get node_indices (source) and neighbour_indices (target) from edges.\n",
     "        node_indices, neighbour_indices = edges[0], edges[1]\n",
     "        # neighbour_repesentations shape is [num_edges, representation_dim].\n",
-    "        neighbour_repesentations = tf.gather(node_repesentations, neighbour_indices)\n",
+    "        neighbour_repesentations = tf.gather(tf.cast(node_repesentations,tf.int32),tf.cast(neighbour_indices,tf.int32))\n",
     "\n",
     "        # Prepare the messages of the neighbours.\n",
     "        neighbour_messages = self.prepare(neighbour_repesentations, edge_weights)\n",
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
     "        # Postprocess node embedding.\n",
     "        x = self.postprocess(x)\n",
     "        # Fetch node embeddings for the input node_indices.\n",
-    "        node_embeddings = tf.gather(x, input)\n",
+    "        node_embeddings = tf.gather(tf.cast(x,tf.int32), tf.cast(input,tf.int32))\n",
     "        # Compute logits\n",
     "        output = self.compute_logits(node_embeddings)\n",
     "    \n",
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
        "(TensorShape([2708, 1433]), (2, 5429), TensorShape([5429]))"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -444,16 +444,16 @@
     },
     {
      "ename": "TypeError",
-     "evalue": "Exception encountered when calling layer \"graph_conv1\" (type GraphConvLayer).\n\nin user code:\n\n    File \"C:\\Users\\USER-PC\\AppData\\Local\\Temp/ipykernel_1692/2946578179.py\", line 101, in call  *\n        neighbour_repesentations = tf.gather(node_repesentations, neighbour_indices)\n\n    TypeError: Value passed to parameter 'indices' has DataType float32 not in list of allowed values: int32, int64\n\n\nCall arguments received:\n  • inputs=('tf.Tensor(shape=(None, 32), dtype=float32)', 'tf.Tensor(shape=(None, 2), dtype=float32)', 'tf.Tensor(shape=(None, 1), dtype=float32)')",
+     "evalue": "Exception encountered when calling layer \"graph_conv1\" (type GraphConvLayer).\n\nin user code:\n\n    File \"C:\\Users\\USER-PC\\AppData\\Local\\Temp/ipykernel_1692/237859809.py\", line 104, in call  *\n        neighbour_messages = self.prepare(neighbour_repesentations, edge_weights)\n    File \"C:\\Users\\USER-PC\\AppData\\Local\\Temp/ipykernel_1692/2946578179.py\", line 40, in prepare  *\n        messages = self.ffn_prepare(node_repesentations)\n    File \"C:\\Users\\USER-PC\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\keras\\utils\\traceback_utils.py\", line 67, in error_handler  **\n        raise e.with_traceback(filtered_tb) from None\n\n    TypeError: Exception encountered when calling layer \"batch_normalization_110\" (type BatchNormalization).\n    \n    Input 'y' of 'AddV2' Op has type float32 that does not match type int32 of argument 'x'.\n    \n    Call arguments received:\n      • inputs=tf.Tensor(shape=(2, 32), dtype=int32)\n      • training=None\n\n\nCall arguments received:\n  • inputs=('tf.Tensor(shape=(None, 32), dtype=float32)', 'tf.Tensor(shape=(None, 2), dtype=float32)', 'tf.Tensor(shape=(None, 1), dtype=float32)')",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
       "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_1692/3909144266.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnum_classes\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m gnn_model = GNNModel(\n\u001b[0m\u001b[0;32m     12\u001b[0m     \u001b[1;31m#graph_info=graph_info,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[0mnum_classes\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnum_classes\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_1692/2783922980.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, num_classes, hidden_units, aggregation_type, combination_type, dropout_rate, normalize, *args, **kwargs)\u001b[0m\n\u001b[0;32m     47\u001b[0m         \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpreprocess\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput_node_features\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     48\u001b[0m         \u001b[1;31m# Apply the first graph conv layer.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 49\u001b[1;33m         \u001b[0mx1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconv1\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minput_edges\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minput_edges_weights\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     50\u001b[0m         \u001b[1;31m# Skip connection.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     51\u001b[0m         \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx1\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_1692/1251587960.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, num_classes, hidden_units, aggregation_type, combination_type, dropout_rate, normalize, *args, **kwargs)\u001b[0m\n\u001b[0;32m     47\u001b[0m         \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpreprocess\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput_node_features\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     48\u001b[0m         \u001b[1;31m# Apply the first graph conv layer.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 49\u001b[1;33m         \u001b[0mx1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconv1\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minput_edges\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minput_edges_weights\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     50\u001b[0m         \u001b[1;31m# Skip connection.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     51\u001b[0m         \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx1\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\keras\\utils\\traceback_utils.py\u001b[0m in \u001b[0;36merror_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     65\u001b[0m     \u001b[1;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m  \u001b[1;31m# pylint: disable=broad-except\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     66\u001b[0m       \u001b[0mfiltered_tb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_process_traceback_frames\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__traceback__\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 67\u001b[1;33m       \u001b[1;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfiltered_tb\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     68\u001b[0m     \u001b[1;32mfinally\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     69\u001b[0m       \u001b[1;32mdel\u001b[0m \u001b[0mfiltered_tb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\tensorflow\\python\\autograph\\impl\\api.py\u001b[0m in \u001b[0;36mwrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    697\u001b[0m       \u001b[1;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m  \u001b[1;31m# pylint:disable=broad-except\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    698\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'ag_error_metadata'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 699\u001b[1;33m           \u001b[1;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mag_error_metadata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_exception\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    700\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    701\u001b[0m           \u001b[1;32mraise\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: Exception encountered when calling layer \"graph_conv1\" (type GraphConvLayer).\n\nin user code:\n\n    File \"C:\\Users\\USER-PC\\AppData\\Local\\Temp/ipykernel_1692/2946578179.py\", line 101, in call  *\n        neighbour_repesentations = tf.gather(node_repesentations, neighbour_indices)\n\n    TypeError: Value passed to parameter 'indices' has DataType float32 not in list of allowed values: int32, int64\n\n\nCall arguments received:\n  • inputs=('tf.Tensor(shape=(None, 32), dtype=float32)', 'tf.Tensor(shape=(None, 2), dtype=float32)', 'tf.Tensor(shape=(None, 1), dtype=float32)')"
+      "\u001b[1;31mTypeError\u001b[0m: Exception encountered when calling layer \"graph_conv1\" (type GraphConvLayer).\n\nin user code:\n\n    File \"C:\\Users\\USER-PC\\AppData\\Local\\Temp/ipykernel_1692/237859809.py\", line 104, in call  *\n        neighbour_messages = self.prepare(neighbour_repesentations, edge_weights)\n    File \"C:\\Users\\USER-PC\\AppData\\Local\\Temp/ipykernel_1692/2946578179.py\", line 40, in prepare  *\n        messages = self.ffn_prepare(node_repesentations)\n    File \"C:\\Users\\USER-PC\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\keras\\utils\\traceback_utils.py\", line 67, in error_handler  **\n        raise e.with_traceback(filtered_tb) from None\n\n    TypeError: Exception encountered when calling layer \"batch_normalization_110\" (type BatchNormalization).\n    \n    Input 'y' of 'AddV2' Op has type float32 that does not match type int32 of argument 'x'.\n    \n    Call arguments received:\n      • inputs=tf.Tensor(shape=(2, 32), dtype=int32)\n      • training=None\n\n\nCall arguments received:\n  • inputs=('tf.Tensor(shape=(None, 32), dtype=float32)', 'tf.Tensor(shape=(None, 2), dtype=float32)', 'tf.Tensor(shape=(None, 1), dtype=float32)')"
      ]
     }
    ],
